# cellveyor

./: .gitignore  .mdlrc  CODE_OF_CONDUCT.md  README.md  coverage.txt  credentials.json  pyproject.toml  service.json  shell.nix
.github/: pull_request_template.md
.github/images/: test-image .md
.github/issue_templates/: bug_report.md
.github/workflows/: build.yml
cellveyor/: constants.py  data.py  filesystem.py  linkage.py  main.py  report.py  transfer.py
spreadsheets/: fake_spreadsheet.xlsx  feedback.yml
test_one/: create.py  test_spreadsheet.py  testing_gspread.py  token.json
tests/: test_constants.py  test_data.py  test_filesystem.py
